--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -289,3 +289,9 @@ textarea
   cursor: default
   pointer:none
   opacity:.5
+
+.lataacsv
+  font-size: 14px;
+  padding-top: 28px;
+  font-weight: 600;
+  text-align: right
