LIVIJUKU-593: Tunnuslukuraportointidemon laajentaminen ja jakaminen useille sivuille

--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -12,8 +12,18 @@
         </a>
       </li>
       <li>
-        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.raportit()">
-          Tunnuslukuraportit
+        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.valtionavustuskuvaajat()">
+          Valtionavustuskuvaajat
+        </a>
+      </li>
+      <li>
+        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.tunnuslukukuvaajat()">
+          Tunnuslukukuvaajat
+        </a>
+      </li>
+      <li>
+        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.omakuvaaja()">
+          Oma kuvaaja tunnusluvuista
         </a>
       </li>
     </ul>
