LIVIJUKU-593: Tunnuslukuraportointidemon laajentaminen ja jakaminen useille sivuille

--- a/app/scripts/views/yhteinen/tunnuslukuraportit-valtionavustuskuvaajat.html
+++ b/app/scripts/views/yhteinen/tunnuslukuraportit-valtionavustuskuvaajat.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="row">
+    <h1>Valtionavustuskuvaajat</h1>
+  </div>
   <juku-navigation>
     <juku-tabs>
       <juku-tab
