--- a/app/scripts/views/yhteinen/tunnuslukuraportit-omakuvaaja.html
+++ b/app/scripts/views/yhteinen/tunnuslukuraportit-omakuvaaja.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="row">
+    <h1>Oma kuvaaja tunnusluvuista</h1>
+  </div>
   <juku-navigation>
     <juku-tabs>
       <juku-tab
@@ -11,6 +14,6 @@
     </juku-tabs>
   </juku-navigation>
   <div class="row">
-    <h2>Oma kuvaaja tunnusluvuista</h2>
+    <h2>Kesken, vaatii määrittelyä</h2>
   </div>
 </div>
