LIVIJUKU-604: Hakemuksen lähettäminen -varmistusdialogiin tekstilisäys

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -283,7 +283,7 @@
             juku-varmistusdialogi
             varmistusotsake="Hakemuksen lähettäminen"
             varmistusteksti="Oletko varma, että haluat lähettää hakemuksen? Hakemuksen lähettämistä ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa lähettämisen jälkeen. Lähetä hakemus painamalla Kyllä-painiketta. Huom! Liitteiden määrästä riippuen, hakemuksen lähettäminen asianhallintaan kestää 10-70 sekuntia."
-
+            varmistusteksti2="Lähettämisen jälkeen hakemus ja sen liitteet ovat näkyvissä kaikille JUKU-käyttäjille."
             operaatio="tallennaHakemus(lisatoiminto.LAHETA)"
             class="btn btn-success disabled-button-tooltip"
             ng-disabled="!hakemusLahettaminenEnabled()">Tallenna ja lähetä hakemus
