--- a/app/scripts/components/varmistusdialogi/index.html
+++ b/app/scripts/components/varmistusdialogi/index.html
@@ -1,5 +1,5 @@
 <div class="modal-header">{{varmistusotsake}}</div>
-<div class="modal-body">{{varmistusteksti}}</div>
+<div class="modal-body"><p>{{varmistusteksti}}</p><p>{{varmistusteksti2}}</p></div>
 <div class="modal-footer">
   <button class="btn btn-primary pull-right" ng-click="ok()">Kyllä</button>
   <button class="btn btn-warning pull-left" ng-click="cancel()">Ei</button>
