LIVIJUKU-566 - ELY hakemusten päätösten tallennus

--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -216,7 +216,7 @@
                  ng-if="!kaikkiTarkastettu"></div>
           </button>
 
-          <button data-ng-click="tallennaPaatos(0)" class="pull-right btn btn-primary disabled-button-tooltip">Tallenna
+          <button data-ng-click="tallennaPaatokset()" class="pull-right btn btn-primary disabled-button-tooltip">Tallenna
             tiedot
           </button>
         </juku-controls-buttons>
