LIVIJUKU-547: ELY-hakemukset: varsinainen hakemusnäyttö ja E2E-testit

--- a/app/scripts/views/hakemus/ely-forms.html
+++ b/app/scripts/views/hakemus/ely-forms.html
@@ -1,6 +1,6 @@
 <juku-form-section>
   <h3>MÄÄRÄRAHATARPEET</h3>
-  <juku-ely-maararahatarpeet vuosi="hakemus.vuosi" hakemus="hakemus" maararahatarpeet="maararahaTarpeet"
+  <juku-ely-maararahatarpeet vuosi="hakemus.vuosi" hakemus="hakemus" maararahatarpeet="maararahatarpeet"
                              maararahatarvetyypit="maararahatarvetyypit"
                              is-readonly="!hakemusTallentaminenEnabled()"></juku-ely-maararahatarpeet>
 
