--- a/app/scripts/views/yhteinen/asetukset.html
+++ b/app/scripts/views/yhteinen/asetukset.html
@@ -35,7 +35,7 @@
             <p>{{sahkoposti}}</p>
           </div>
           <div class="col-md-4">
-            <h5>Pankkitilinumero</h5>
+            <h5>IBAN-tilinumero</h5>
 
             <p>{{$root.userPankkitilinumero}}</p>
           </div>
